<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Umweltzone</string>
    <string name="action_cities">Cities</string>
    <string name="action_city_info" translatable="false">@string/city_info_activity_title</string>
    <string name="action_faq" translatable="false">@string/faq_activity_title</string>
    <string name="action_feedback" translatable="false">@string/feedback_activity_title</string>
    <string name="action_share_app">Share this app &#8230;</string>
    <string name="action_changelog">Version information</string>
    <string name="action_settings" translatable="false">@string/settings_activity_title</string>
    <string name="action_about" translatable="false">@string/about_activity_title</string>
    <string name="share_intent_message">
        <![CDATA[Try out Umweltzone - the Android app which has all information about low emission zones and Diesel prohibition zones in Germany.
        \nGet it here for free: https://play.google.com/store/apps/details?id=de.avpptr.umweltzone]]>
    </string>
    <string name="map_my_location_activation_hint">
        Tap here to configure the location lookup in order to show
        your own position on the map.
    </string>
    <string name="feedback_activity_title">Feedback</string>
    <string name="appinfo_application_logo_description">
        Logo of the &#8220;Umweltzone&#8221; application
    </string>
    <string name="about_activity_title">About</string>
    <string name="appinfo_subtitle">
        An Android app for low emission zones (german: Umweltzonen) and Diesel prohibition zones in Germany
    </string>
    <string name="appinfo_copyright_title">Idea and realization</string>
    <string name="appinfo_copyright_content">
        (&#169;) Tobias Preuss, 2013 &#8211; 2019
    </string>
    <string name="appinfo_description_title">Description</string>
    <string name="appinfo_description_content">
        This application shows the location of low emission zones (LEZ) and Diesel
        prohibition zones (DPZ) and provides further facts concerning the topics.
        Driving into an LEZ is restricted to vehicles which are tagged with a
        specific sticker. The sticker corresponds with the emission level of the
        vehicle. Vehicles which do not comply with a certain Diesel exhaust emission
        standard are restricted to enter a DPZ. The aim of the entry restrictions is
        to increase the air quality within cities.
        Fine particles must be reduced to preserve citizen&#8217;s health. &#8212;
        In addition to the map and a list of cities there is a detail screen which
        contains individual information for the selected city.
        Frequently asked questions can be found via the
        &#8220;FAQ&#8221; menu item. Moreover, there are links to websites which
        provide more information about LEZ, DPZ and related topics.
    </string>
    <string name="appinfo_disclaimer_title">Data, quality and updates</string>
    <string name="appinfo_disclaimer_content">
        Wherever data and coordinates of the zones were available in digital
        format they were retrieved directly from cities or governments.
        Further, OpenStreetMap was an important source since a number of
        low emission zones can be found there. In addition, some zones have
        been manually digitalized based on the official publications of the
        Federal Environment Agency.
        Due to the fact that many authorities publish low resolution graphics
        of scanned maps it cannot be guaranteed that the zone borders exactly
        match the path in reality. Zone data and coordinates vary by their source,
        quality and precision in the digitalization process.
        Additionally, there is no automatism to be informed about changes done
        by the cities. Zone data is updated manually and highly depends on the
        feedback of friendly users like you.
        For these reasons we do not guarantee for a perfect visualization and
        we are not liable for costs or punishments. We strongly suggest to always
        rely on the road sign in the particular cities.
    </string>
    <string name="appinfo_references_name_umweltbundesamt">Federal Environment Agency</string>
    <string name="appinfo_references_url_umweltbundesamt" translatable="false">
        http://www.umweltbundesamt.de
    </string>
    <string name="appinfo_references_graphics_title">Graphics</string>
    <string name="appinfo_references_graphics_content">
        Graphics such as the logo and stickers are taken from Wikimedia Commons.
    </string>
    <string name="appinfo_references_name_wikimedia_commons" translatable="false">
        Wikimedia Commons
    </string>
    <string name="appinfo_references_url_wikimedia_commons" translatable="false">
        http://commons.wikimedia.org
    </string>
    <string name="appinfo_references_texts_title">Texts</string>
    <string name="appinfo_references_texts_content">
        A source reference is given whenever text is taken from somewhere else.
    </string>
    <string name="appinfo_references_libraries_title">Libraries</string>
    <string name="appinfo_references_libraries_content">
        The following software libraries are used within the application.
    </string>
    <string name="appinfo_references_name_android_testing_support_library" translatable="false">
        Android Testing Support Library
    </string>
    <string name="appinfo_references_url_android_testing_support_library" translatable="false">
        https://google.github.io/android-testing-support-library/
    </string>
    <string name="appinfo_references_name_google_play_services" translatable="false">
        Google Play Services
    </string>
    <string name="appinfo_references_url_google_play_services" translatable="false">
        http://developer.android.com/google/play-services
    </string>
    <string name="appinfo_references_name_google_support_library" translatable="false">
        Google Support Library
    </string>
    <string name="appinfo_references_url_google_support_library" translatable="false">
        https://developer.android.com/topic/libraries/support-library/features
    </string>
    <string name="appinfo_references_name_jackson" translatable="false">
        Jackson JSON processor
    </string>
    <string name="appinfo_references_url_jackson" translatable="false">
        http://jackson.codehaus.org
    </string>
    <string name="appinfo_references_name_google_analytics" translatable="false">
        Google Analytics
    </string>
    <string name="appinfo_references_url_google_analytics" translatable="false">
        http://developers.google.com/analytics/devguides/collection/android/
    </string>
    <string name="appinfo_references_name_parceler" translatable="false">
        Parceler
    </string>
    <string name="appinfo_references_url_parceler" translatable="false">
        http://parceler.org
    </string>
    <string name="appinfo_references_url_road_signs" translatable="false">
        https://github.com/Umweltzone/roadsigns
    </string>
    <string name="appinfo_references_url_snack_engage" translatable="false">
        https://github.com/ligi/SnackEngage
    </string>
    <string name="appinfo_references_url_trace_droid" translatable="false">
        http://github.com/ligi/tracedroid
    </string>
    <string name="appinfo_references_url_ckchangelog" translatable="false">
        http://github.com/cketti/ckChangeLog
    </string>
    <string name="appinfo_references_url_typed_preferences" translatable="false">
        http://github.com/johnjohndoe/TypedPreferences
    </string>
    <string name="appinfo_build_info_title">Build information</string>
    <string name="appinfo_build_info_time">Build time</string>
    <string name="appinfo_build_info_version_code">Version code</string>
    <string name="appinfo_build_info_hash">Build hash</string>
    <string name="appinfo_contact_title">Contact</string>
    <string name="appinfo_contact_content">
        All kinds of feedback such as improvement ideas, error reports
        or feature requests can be sent to the following address:
    </string>
    <string name="appinfo_contact_email" translatable="false">
        @string/config_contact_email_address
    </string>
    <string name="appinfo_uservoice_title" translatable="false">UserVoice</string>
    <string name="appinfo_uservoice_content">
        Own ideas also can be posted on our UserVoice website. Posts of
        other people can be rated which allows us to see which improvements
        the majority of users want.
    </string>
    <string name="appinfo_uservoice_url" translatable="false">
        http://umweltzone.uservoice.com
    </string>
    <string name="appinfo_rating_title">Rating</string>
    <string name="appinfo_rating_content">
        We are happy to get your positive rating in the Google PlayStore.
    </string>
    <string name="appinfo_rating_url" translatable="false">
        http://play.google.com/store/apps/details?id=de.avpptr.umweltzone
    </string>
    <string name="city_info_section_title_lez">Details about the low emission zone</string>
    <string name="city_info_zone_number_since">
        Since <xliff:g example="Feb 1, 2016" id="date">%1$s</xliff:g> only
        vehicles <xliff:g example="with a green" id="with_colors">%2$s</xliff:g> sticker are
        allowed to drive into the low emission zone.
    </string>
    <string name="city_info_next_zone_number_as_of">
        As of <xliff:g example="Feb 1, 2016" id="date">%1$s</xliff:g> only
        vehicles <xliff:g example="with a green" id="with_colors">%2$s</xliff:g> sticker are
        allowed to drive into the low emission zone.
    </string>
    <string name="city_info_abroad_licensed_vehicle_zone_info">
        Vehicles registered abroad are allowed
        to drive into the low emission zone
        until <xliff:g example="Jan 31, 2016" id="date">%1$s</xliff:g>
        <xliff:g example="with a yellow or a green" id="with_colors">%2$s</xliff:g> sticker.
    </string>
    <string name="city_info_list_of_cities">
        The zone contains the following cities or certain
        districts: <xliff:g example="Bochum, Castrop-Rauxel, Essen" id="cities">%1$s</xliff:g> and
        <xliff:g example="Recklinghausen" id="last_city">%2$s</xliff:g>.
    </string>
    <string name="city_info_geometry_source_text">Source of
        the geometry coordinates: <xliff:g example="Geoportal Berlin / Umweltzone Berlin" id="geometrySource">%1$s</xliff:g>
    </string>
    <string name="city_info_geometry_updated_at_text">
        Last update of the zone
        geometry: <xliff:g example="Sep 6, 2014" id="updatedAt">%1$s</xliff:g>
    </string>
    <string name="no_city_selected_title">City info</string>
    <string name="no_city_selected_status_desc">
        Detail information for the zone cannot be displayed.
        Please select a zone first.
    </string>
    <string name="no_city_selected_select_zone">Select a zone</string>
    <string name="settings_category_title_data_privacy">Data privacy</string>
    <string name="settings_key_google_analytics" translatable="false">
        KEY_GOOGLE_ANALYTICS_IS_ENABLED
    </string>
    <string name="settings_title_google_analytics">Send anonymized usage statistics</string>
    <string name="settings_summary_google_analytics">
        Allows to transmit usage statistics and crash reports to Google Analytics. This
        anonymized data is used by the developer of the Umweltzone app to analyze program
        errors and to continuously improve the app.
    </string>
    <string name="settings_default_value_google_analytics" translatable="false">true</string>
    <string name="settings_title_data_privacy_statement_de">
        Data privacy statement (German) &#8230;
    </string>
</resources>