<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2019  Tobias Preuss

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:gravity="center"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent"
    tools:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        style="@style/AppInfo.ContentTitle"
        android:text="@string/appinfo_references_libraries_title" />

    <TextView
        style="@style/AppInfo.TextContent"
        android:text="@string/appinfo_references_libraries_content" />

    <TextView
        android:id="@+id/app_info_ckchangelog"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_ckchangelog" />

    <TextView
        android:id="@+id/app_info_android_testing_support_library"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_android_testing_support_library" />

    <TextView
        android:id="@+id/app_info_google_analytics"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_google_analytics" />

    <TextView
        android:id="@+id/app_info_google_support_library"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_google_support_library" />

    <TextView
        android:id="@+id/app_info_google_play_services"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_google_play_services" />

    <TextView
        android:id="@+id/app_info_jackson"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_jackson" />

    <TextView
        android:id="@+id/app_info_parceler"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_parceler" />

    <TextView
        android:id="@+id/app_info_road_signs"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_road_signs" />

    <TextView
        android:id="@+id/app_info_snack_engage"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_snack_engage" />

    <TextView
        android:id="@+id/app_info_trace_droid"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_trace_droid" />

    <TextView
        android:id="@+id/app_info_typed_preferences"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_references_url_typed_preferences" />

</merge>
