<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2018  Tobias Preuss

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:gravity="center"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent"
    tools:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        style="@style/AppInfo.ContentTitle"
        android:text="@string/appinfo_contact_title" />

    <TextView
        style="@style/AppInfo.TextContent"
        android:text="@string/appinfo_contact_content" />

    <TextView
        android:id="@+id/app_info_contact_email"
        style="@style/TextView.Email"
        tools:text="@string/appinfo_contact_email" />

    <View style="@style/HorizontalLine" />

    <TextView
        style="@style/AppInfo.ContentTitle"
        android:text="@string/appinfo_uservoice_title" />

    <TextView
        style="@style/AppInfo.TextContent"
        android:text="@string/appinfo_uservoice_content" />

    <TextView
        android:id="@+id/app_info_user_voice"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_uservoice_url" />

    <View style="@style/HorizontalLine" />

    <TextView
        style="@style/AppInfo.ContentTitle"
        android:text="@string/appinfo_rating_title" />

    <TextView
        style="@style/AppInfo.TextContent"
        android:text="@string/appinfo_rating_content" />

    <TextView
        android:id="@+id/app_info_rating"
        style="@style/AppInfo.WebLink"
        tools:text="@string/appinfo_rating_url" />

</merge>
