<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2018  Tobias Preuss

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="@string/settings_category_title_data_privacy">

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="@string/settings_default_value_google_analytics"
            android:key="@string/settings_key_google_analytics"
            android:summary="@string/settings_summary_google_analytics"
            android:title="@string/settings_title_google_analytics" />

        <android.support.v7.preference.Preference
            android:key="@string/settings_key_data_privacy_statement_de"
            android:title="@string/settings_title_data_privacy_statement_de">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/johnjohndoe/Umweltzone/blob/master/DATA-PRIVACY-DE.md" />
        </android.support.v7.preference.Preference>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
