<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2018  Tobias Preuss

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:umweltzone="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="111"
        android:title="@string/action_feedback"
        umweltzone:showAsAction="never" />

    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="112"
        android:title="@string/action_share_app"
        umweltzone:showAsAction="never" />

    <item
        android:id="@+id/action_changelog"
        android:icon="@drawable/ic_action_about_dark"
        android:orderInCategory="113"
        android:title="@string/action_changelog"
        umweltzone:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="114"
        android:title="@string/action_settings"
        umweltzone:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about_dark"
        android:orderInCategory="115"
        android:title="@string/action_about"
        umweltzone:showAsAction="never" />

</menu>
