<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2018  Tobias Preuss

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:gravity="center"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent"
    tools:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        style="@style/AppInfo.ContentTitle"
        android:text="@string/appinfo_build_info_title" />

    <TextView
        style="@style/AppInfo.SubTitle"
        android:text="@string/appinfo_build_info_time" />

    <TextView
        android:id="@+id/buildTime"
        style="@style/AppInfo.SingleLineTextContent"
        tools:text="@sample/build_info.json/buildTime" />

    <TextView
        style="@style/AppInfo.SubTitle"
        android:text="@string/appinfo_build_info_version_code" />

    <TextView
        android:id="@+id/buildVersionCode"
        style="@style/AppInfo.SingleLineTextContent"
        tools:text="@sample/build_info.json/versionCode" />

    <TextView
        style="@style/AppInfo.SubTitle"
        android:text="@string/appinfo_build_info_hash" />

    <TextView
        android:id="@+id/buildHash"
        style="@style/AppInfo.SingleLineTextContent"
        tools:text="@sample/build_info.json/buildHash" />

</merge>
