<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2013  Tobias Preuss, Peter Vasil

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:umweltzone="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cities"
        android:icon="@drawable/ic_action_view_as_list_dark"
        android:orderInCategory="100"
        android:title="@string/action_cities"
        umweltzone:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_city_info"
        android:icon="@drawable/ic_action_error_dark"
        android:orderInCategory="101"
        android:title="@string/action_city_info"
        umweltzone:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_faq"
        android:icon="@drawable/ic_action_help_dark"
        android:orderInCategory="102"
        android:title="@string/action_faq"
        umweltzone:showAsAction="ifRoom" />

</menu>
